--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,6 +22,9 @@ jobs:
       run: |
         docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/todo-app:latest .
 
+    - name: Login to ACR 
+      run: |
+        az acr login --name wtcrapptodo
 
     - name: Push image to ACR
       run: |
